Latest fixes in the integration with the CMDI Adapter archive and other necessary changes.